--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start dev": "nodemon app.js",
-    "start": "node app.js"
+    "start dev": "nodemon index.js",
+    "start": "node index.js"
+  },
+  "engines": {
+    "node": "20.x"
   },
   "keywords": [],
   "author": "",
